--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "Helly Hansen automation template with Playwright",
   "main": "index.js",
   "scripts": {
-    "postTest": "npx allure generate allure-results --clean -o allure-report && npx allure open allure-report",
     "test:qa:sanity:chrome": "TEST_ENV=qa npx playwright test tests/specs/ --grep @loginpage --project=chromium --trace on",
     "test:qa:smoke:firefox": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @smoke --project=firefox --reporter=line,allure-playwright || true) && (npm run postTest)",
-    "test:qa:regression:safari": "(npx playwright test tests/specs/ --grep @OrderConfirmation --project=webkit --reporter=line,allure-playwright || true)",
+    "test:qa:orderplacement:safari": "(npx playwright test tests/specs/ --grep @OrderConfirmation --project=webkit --reporter=line,allure-playwright || true)",
     "test:qa:smoke:Pixel5": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @loginpage --project='Mobile chrome' --reporter=line,allure-playwright || true)",
-    "test:qa:smoke:mustoCountry:iPhone12": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @Banner --project='Mobile safari' --reporter=line,allure-playwright || true) && (npm run postTest)"
+    "test:qa:smoke:mustoCountry:iPhone12": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @Banner --project='Mobile safari' --reporter=line,allure-playwright || true) && (npm run postTest)",
+    "postTest": "npx allure generate allure-results --clean -o allure-report && npx allure open allure-report"
   },
   "keywords": [],
   "author": "GSPANN",
