--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test:qa:sanity:chrome": "TEST_ENV=qa npx playwright test tests/specs/ --grep @loginpage --project=chromium --trace on",
-    "test:qa:smoke:firefox": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @smoke --project=firefox --reporter=line,allure-playwright || true) && (npm run postTest)",
-    "test:qa:orderplacement:safari": "(npx playwright test tests/specs/ --grep @OrderConfirmation --project=webkit --reporter=line,allure-playwright || true)",
-    "test:qa:smoke:Pixel5": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @loginpage --project='Mobile chrome' --reporter=line,allure-playwright || true)",
-    "test:qa:smoke:mustoCountry:iPhone12": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @Banner --project='Mobile safari' --reporter=line,allure-playwright || true) && (npm run postTest)",
+    "test:qa:smoke:firefox": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @smoke --project=firefox --reporter=line,allure-playwright) && (npm run postTest)",
+    "test:qa:orderplacement:safari": "(npx playwright test tests/specs/ --grep @OrderConfirmation --project=webkit --reporter=line,allure-playwright )",
+    "test:qa:smoke:Pixel5": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @loginpage --project='Mobile chrome' --reporter=line,allure-playwright )",
+    "test:qa:smoke:mustoCountry:iPhone12": "(TEST_ENV=qa npx playwright test tests/specs/ --grep @Banner --project='Mobile safari' --reporter=line,allure-playwright) && (npm run postTest)",
     "postTest": "npx allure generate allure-results --clean -o allure-report && npx allure open allure-report"
   },
   "keywords": [],
@@ -18,11 +18,11 @@
     "@playwright/test": "^1.49.1",
     "@types/node": "^20.12.2",
     "@zerostep/playwright": "^0.1.5",
-    "allure-playwright": "^2.15.0",
+    "allure-playwright": "^2.15.1",
     "playwright": "^1.43.1"
   },
   "dependencies": {
-    "allure-commandline": "^2.27.0",
+    "allure-commandline": "^2.32.2",
     "node-key-sender": "^1.0.11"
   }
 }
